# muon

./: .gitignore  CLAUDE.md  README.md  main.py  muon.py  pyproject.toml
.claude/: settings.json
.claude/skills/creating-pull-requests/: SKILL.md
.claude/skills/pytorch-test-writer/: SKILL.md
.github/workflows/: claude-code-review.yml  claude.yml
CNN/: best_runs.md  data.py  model.py  train.py
GPT2/: base_eval.py  checkpoint.py  common.py  data.py  dataloader.py  dataset.py  engine.py  model.py  run_eval_sweep.sh  run_sweep.sh  sync_cloud.py  tok_eval.py  tok_train.py  tokenizer.py  train.py  upload_logs_to_wandb.py
MLP/: best_runs.md  data.py  model.py  train.py
attention_NMT/: data.py  dataloader.py  dataset.py  eda.py  tok_eval.py  tok_train.py  tokenizer.py
common/: logger.py  metrics.py
tests/: test_cnn.py  test_gpt2.py  test_gpt2_checkpoint.py  test_mlp.py
